[project]
name = "lab3"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ipykernel>=7.2.0", "jupyter>=1.1.1", "matplotlib>=3.10.8"]

[dependency-groups]
dev = ["ruff>=0.15.0"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E402: Module level import not at top of file (Often needed in notebooks)
ignore = ["E402"]
