[project]
name = "lab3"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ipykernel", "jupyter", "pandas", "matplotlib", "seaborn"]

[dependency-groups]
dev = ["ruff"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E402: Module level import not at top of file (Often needed in notebooks)
ignore = ["E402"]
